--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-query-devtools": "^5.69.0",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "kbar": "^0.1.0-beta.45",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
@@ -40,10 +43,12 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.4.0",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.4",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -51,6 +56,7 @@
     "@types/node": "^22.13.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/zxcvbn": "^4.4.5",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
