--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.4.0",
     "recharts": "^2.15.1",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.13.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
